# ChronoJEPA

./: .gitignore  CLAUDE.md  LICENSE  PAPER.md  PLAN.md  README.md  RESULTS.md  prompts-readme.md  prompts.md  pyproject.toml
.github/workflows/: ci.yml
chronojepa/: __init__.py
chronojepa/data/: __init__.py  augment.py  dataset.py  ett.py  har.py  pems.py  windowing.py
chronojepa/eval/: __init__.py  anomaly.py  classification_dataset.py  collapse.py  comparison.py  model_selection.py  probes.py  stats.py
chronojepa/models/: __init__.py  bagofpatches.py  patchtst.py  predictor.py  revin.py  tcn.py
chronojepa/sigreg/: __init__.py  placements.py  slicing.py  univariate.py
chronojepa/train/: __init__.py  experiment.py  loop.py  objective.py
chronojepa/utils/: __init__.py  devices.py  logging.py  seed.py
configs/: config.yaml
configs/data/: pems.yaml  synthetic.yaml
configs/experiment/: pems_dual.yaml  pems_pooled.yaml  pems_structured.yaml  smoke.yaml
configs/model/: patchtst.yaml  tcn.yaml
configs/optimizer/: adamw.yaml
paper/: README.md  paper.tex  references.bib
scripts/: anomaly.py  architecture_study.py  classify.py  classify_dataset.py  compare.py  horizon_sweep.py  init.sh  lambda_sweep.py  plot_results.py  plot_study.py  train.py
tests/: test_anomaly.py  test_classification.py  test_classification_dataset.py  test_configs.py  test_data.py  test_ett.py  test_eval.py  test_horizon.py  test_lambda.py  test_model_selection.py  test_models.py  test_multistep.py  test_sigreg.py  test_smoke.py  test_stats_probes.py  test_study.py  test_train.py
