[project]
name = "chronojepa"
version = "0.0.0"
description = "Heuristics-free self-supervised representation learning for time series, built on the SIGReg objective from LeJEPA."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rishabh Patil" }]
keywords = ["time-series", "self-supervised-learning", "sigreg", "lejepa", "representation-learning"]
dependencies = [
    "torch>=2,<3",
    "numpy>=1.26,<3",
    "scipy>=1,<2",
    "scikit-learn>=1,<2",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "ruff>=0.6,<1",
    "pre-commit>=3,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chronojepa"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
